// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ibBTC Mint can apply max balance 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 WithStyles(ForwardRef(Grid))-root-105 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        5.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-137 WithStyles(ForwardRef(Grid))-root-138 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-5-54"
      >
        <div
          class="MuiInputBase-root-141 NumericInput-root-139 makeStyles-input-140 MuiInputBase-disabled-144 MuiInputBase-fullWidth-151"
        >
          <input
            class="MuiInputBase-input-152 MuiInputBase-disabled-144"
            disabled=""
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            type="tel"
            value="5.000000"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-159 WithStyles(ForwardRef(Grid))-root-160 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-7-56"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-outlined-166 MuiButton-outlinedSizeSmall-178 MuiButton-sizeSmall-182"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-162"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-230"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-outlined-166 makeStyles-selectButton-198 MuiButton-outlinedSizeSmall-178 MuiButton-sizeSmall-182"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-162"
            >
              <div
                style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
              >
                <img
                  alt="Badger crvRenWSBTC"
                  src="/assets/icons/bcrvrenwsbtc.svg"
                  style="height: 2rem; margin-right: .2rem; display: block;"
                />
                <div
                  class="MuiTypography-root-107 MuiTypography-body1-109"
                >
                  bcrvRenWSBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-186 MuiButton-iconSizeSmall-187"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-200"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-230"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-12-47"
  >
    <svg
      class="makeStyles-arrowDown-209"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-210 WithStyles(ForwardRef(Typography))-root-211 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        10.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-212 WithStyles(ForwardRef(Grid))-root-213 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-9-58 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-10-87"
      >
        <h1
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-214 WithStyles(ForwardRef(Typography))-root-215 MuiTypography-h1-112"
        >
          0.000000
        </h1>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-216 WithStyles(ForwardRef(Grid))-root-217 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-3-52 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-2-79"
      >
        <div
          style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
        >
          <img
            alt="Interest-Bearing BTC"
            src="/assets/icons/ibbtc.svg"
            style="height: 2rem; margin-right: .2rem; display: block;"
          />
          <div
            class="MuiTypography-root-107 MuiTypography-body1-109"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-218"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            1 
            bcrvRenWSBTC
             : 
            0.000000
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.000000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            0.000000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <button
      class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-contained-169 MuiButton-containedPrimary-170 MuiButton-containedSizeLarge-181 MuiButton-sizeLarge-183 MuiButton-fullWidth-184"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-162"
      >
        Connect Wallet
      </span>
      <span
        class="MuiTouchRipple-root-230"
      />
    </button>
  </div>
</div>
`;

exports[`ibBTC Mint displays output ibBTC when mint amount is inputted 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 WithStyles(ForwardRef(Grid))-root-105 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        5.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-137 WithStyles(ForwardRef(Grid))-root-138 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-5-54"
      >
        <div
          class="MuiInputBase-root-141 NumericInput-root-139 makeStyles-input-140 MuiInputBase-disabled-144 MuiInputBase-fullWidth-151"
        >
          <input
            class="MuiInputBase-input-152 MuiInputBase-disabled-144"
            disabled=""
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            type="tel"
            value="12"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-159 WithStyles(ForwardRef(Grid))-root-160 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-7-56"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-outlined-166 MuiButton-outlinedSizeSmall-178 MuiButton-sizeSmall-182"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-162"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-230"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-outlined-166 makeStyles-selectButton-198 MuiButton-outlinedSizeSmall-178 MuiButton-sizeSmall-182"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-162"
            >
              <div
                style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
              >
                <img
                  alt="Badger crvRenWSBTC"
                  src="/assets/icons/bcrvrenwsbtc.svg"
                  style="height: 2rem; margin-right: .2rem; display: block;"
                />
                <div
                  class="MuiTypography-root-107 MuiTypography-body1-109"
                >
                  bcrvRenWSBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-186 MuiButton-iconSizeSmall-187"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-200"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-230"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-12-47"
  >
    <svg
      class="makeStyles-arrowDown-209"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-210 WithStyles(ForwardRef(Typography))-root-211 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        10.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-212 WithStyles(ForwardRef(Grid))-root-213 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-9-58 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-10-87"
      >
        <h1
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-214 WithStyles(ForwardRef(Typography))-root-215 MuiTypography-h1-112"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-216 WithStyles(ForwardRef(Grid))-root-217 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-3-52 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-2-79"
      >
        <div
          style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
        >
          <img
            alt="Interest-Bearing BTC"
            src="/assets/icons/ibbtc.svg"
            style="height: 2rem; margin-right: .2rem; display: block;"
          />
          <div
            class="MuiTypography-root-107 MuiTypography-body1-109"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-218"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            1 
            bcrvRenWSBTC
             : 
            1.000000
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            11.988000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <button
      class="MuiButtonBase-root-190 MuiButton-root-161 MuiButton-contained-169 MuiButton-containedPrimary-170 MuiButton-containedSizeLarge-181 MuiButton-sizeLarge-183 MuiButton-fullWidth-184"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-162"
      >
        Connect Wallet
      </span>
      <span
        class="MuiTouchRipple-root-230"
      />
    </button>
  </div>
</div>
`;
